// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListGroupItem component matches ListGroupItem 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #343a40;
  background-color: #fff;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #343a40;
  background-color: #fff;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #343a40;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #f0f0f0;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem action active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #fff;
  border-color: rgba(0,0,0,0.2);
  background-color: #007bff;
  border-color: #007bff;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #007bff;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #fff;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #f0f0f0;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #007bff;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem danger 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #721c24;
  background-color: #f5b4bb;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem danger action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #721c24;
  background-color: #f5b4bb;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #721c24;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #f5b4bb;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem danger active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #f5b4bb;
  border-color: rgba(0,0,0,0.2);
  background-color: #721c24;
  border-color: #721c24;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #721c24;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #721c24;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem dark 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #171a1d;
  background-color: #abaeb1;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem dark action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #171a1d;
  background-color: #abaeb1;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #171a1d;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #abaeb1;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem dark active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #abaeb1;
  border-color: rgba(0,0,0,0.2);
  background-color: #171a1d;
  border-color: #171a1d;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #171a1d;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #171a1d;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem disabled 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #cccecf;
  background-color: #fff;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
  disabled=""
/>
`;

exports[`ListGroupItem component matches ListGroupItem disabled action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #cccecf;
  background-color: #fff;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #cccecf;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
  disabled=""
/>
`;

exports[`ListGroupItem component matches ListGroupItem info 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #10707f;
  background-color: #a3d6de;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem info action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #10707f;
  background-color: #a3d6de;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #10707f;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #a3d6de;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem info active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #a3d6de;
  border-color: rgba(0,0,0,0.2);
  background-color: #10707f;
  border-color: #10707f;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #10707f;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #10707f;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem light 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #343a40;
  background-color: #cccecf;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem light action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #343a40;
  background-color: #cccecf;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #343a40;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #fdfdfe;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem light active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #cccecf;
  border-color: rgba(0,0,0,0.2);
  background-color: #343a40;
  border-color: #343a40;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #343a40;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #343a40;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem primary 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #004085;
  background-color: #9cc9fb;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem primary action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #004085;
  background-color: #9cc9fb;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #004085;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #9cc9fb;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem primary active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #9cc9fb;
  border-color: rgba(0,0,0,0.2);
  background-color: #004085;
  border-color: #004085;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #004085;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #004085;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem secondary 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #383d41;
  background-color: #b4b5b7;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem secondary action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #383d41;
  background-color: #b4b5b7;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #383d41;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #b4b5b7;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem secondary active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #b4b5b7;
  border-color: rgba(0,0,0,0.2);
  background-color: #383d41;
  border-color: #383d41;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #383d41;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #383d41;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem success 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #155724;
  background-color: #72d889;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem success action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #155724;
  background-color: #72d889;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #155724;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #72d889;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem success active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #72d889;
  border-color: rgba(0,0,0,0.2);
  background-color: #155724;
  border-color: #155724;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #155724;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #155724;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem warning 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #856404;
  background-color: #f3da8d;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem warning action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #856404;
  background-color: #f3da8d;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #856404;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #f3da8d;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;

exports[`ListGroupItem component matches ListGroupItem warning active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #f3da8d;
  border-color: rgba(0,0,0,0.2);
  background-color: #856404;
  border-color: #856404;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #856404;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #856404;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<li
  class="sc-AxhCb c0"
/>
`;
